调整了UI界面，去掉了不要的功能，增加了AI助手，不过样式没调整好

--- a/src/app/core-ui/side-nav/side-nav.component.html
+++ b/src/app/core-ui/side-nav/side-nav.component.html
@@ -39,26 +39,6 @@
     </mat-menu>
   </div>
 
-  <!-- class title missleading, but works ;) -->
-  <div class="tag">
-    <button
-      class="route-link"
-      mat-menu-item
-      routerLink="timeline"
-      routerLinkActive="isActiveRoute"
-    >
-      <mat-icon>filter_list</mat-icon>
-      <span class="text">{{T.F.TIMELINE.MENU_TITLE|translate}}</span>
-    </button>
-    <button
-      (click)="openTimelineSettings()"
-      class="tag-settings-btn"
-      mat-icon-button
-    >
-      <mat-icon>settings</mat-icon>
-    </button>
-  </div>
-
   <button
     #menuEntry
     class="route-link"
@@ -247,6 +227,24 @@
 </section>
 
 <section class="app">
+
+  <mat-card class="ai-assistant">
+    <mat-card-header>
+      <!-- AI头像 -->
+      <mat-card-avatar>
+        <img src="assets/avatar/cat_avatar.jpeg" alt="AI Avatar" />
+      </mat-card-avatar>
+      <mat-card-title>橘波波</mat-card-title>
+    </mat-card-header>
+    
+    <!-- 聊天气泡 -->
+    <mat-card-content>
+      <mat-chip-list>
+        <mat-chip color="primary" selected>{{ assistantMessage }}</mat-chip>
+      </mat-chip-list>
+    </mat-card-content>
+  </mat-card>
+
   <mat-form-field
     appearance="fill"
     class="user-input"
